---------------------------------------------------------------------------------------------------
Version: 0.2.31
Date: 2020-12-12
  Bugfixes:
    - [tech] fixing inherited has to be class specific
    - fixing wrong Joule calculations
  Changes:
    - No fuel property anymore. Directly implemented with AdditionalHelp
---------------------------------------------------------------------------------------------------
Version: 0.2.30
Date: 2020-12-10
  Changes:
    - putting panel for created-by in then center since it is more important
    - [tech] extend class-class to handle inherited properties
  Refactor:
    - [tech] using "class" everywhere where class pattern is used
---------------------------------------------------------------------------------------------------
Version: 0.2.29
Date: 2020-12-08
  Bugfixes:
    - fixing crafting order from recipe on any inteb-help panel causes a crash
  Changes:
    - Shift-click handler on item: select into cursor
    - zn-CH localisation by Ting_amm
  Refactor:
    - Special actions reworked (uses less localised strings)
---------------------------------------------------------------------------------------------------
Version: 0.2.28
Date: 2020-12-08
  Changes:
    - help on technologies improved
    - Alignment in technology panels
    - Correct data for inifinite technologies 
    - Prerequisite reseaches
    - Array:Clone whithout predicate was missing
    - Array:Stringify introduced
    - Common.ClickTarget re-introduced (it is only almost like CommonKey)
    - Eventmanager: Research-state things
  Refactor:
    - better naming
    - reintroducing MiningRecipe and BoilingRecipe
---------------------------------------------------------------------------------------------------
Version: 0.2.27
Date: 2020-12-07
  Changes:
    - zn-CH localisation by Ting_amm
    - help on recipes (First version, needs improvement, help welcome)
    - help on technologies (First version, needs improvement, help welcome)